syntax = "proto3";

package coolstore.inventory.v1;

option csharp_namespace = "CoolStore.Protobuf.Inventory.V1";

import "google/protobuf/wrappers.proto";

message InventoryDto {
  string id = 1;
  string location = 2;
  google.protobuf.StringValue description = 3;
  string website = 4;
}
